# lightning-flash

./: .codecov.yml  .deepsource.toml  .gitattributes  .gitignore  .gitmodules  .mergify.yml  .pep8speaks.yml  .pre-commit-config.yaml  .readthedocs.yml  .run_local_tests.sh  CHANGELOG.md  LICENSE  MANIFEST.in  Makefile  README.md  azure-pipelines.yml  mask_1.npy  pyproject.toml  requirements.txt  setup.cfg  setup.py  test.py  train_annotations.json  versioneer.py
.azure/: gpu-example-tests.yml  gpu-special-tests.yml  template-examples.yml  testing-template.yml
.azure-pipelines/: gpu-example-tests.yml  gpu-special-tests.yml  gpu-tests.yml  testing-template.yml
.circleci/: config.yml
.github/: CODEOWNERS  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml  labeler.yml  mergify.yml  stale.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  how-to-question.md
.github/workflows/: autoblack.yml  ci-checks.yml  ci-install-pkg.yml  ci-notebook.yml  ci-schema.yml  ci-testing copy.yml  ci-testing.yml  ci-unittests.yml  code-format.yml  docs-check.yml  docs-deploy.yml  docs-link.yml  docs.yml  install-package.yml  notebook-tests.yml  pypi-release.yml  rebase.yml
dockers/tpu-tests/: Dockerfile  tpu_test_cases.jsonnet
docs/: .build_docs.sh
docs/extensions/: autodatasources.py  lightning_tutorials.py  pytorch_tutorials.py  stability.py
docs/source/: conf.py  custom_task.rst  fiftyone_objects.inv  governance.rst  index.rst  installation.md  quickstart.rst  render_data.py  stability.rst  task_template.rst
examples/: graph_classification.py  question_answering.py  speech_recognition.py  tabular_forecasting.py  template.py  video_classification.py
examples/audio/: audio_classification.py  speech_recognition.py
examples/graph/: graph_classification.py  graph_embedder.py
examples/image/: baal_img_classification_active_learning.py  face_detection.py  fiftyone_img_classification.py  fiftyone_img_classification_datasets.py  fiftyone_img_embedding.py  image_classification.py  image_classification_multi_label.py  image_embedder.py  instance_segmentation.py  learn2learn_img_classification_imagenette.py  semantic_segmentation.py  style_transfer.py
examples/pointcloud/: pcloud_detection.py  pcloud_segmentation.py  visual_detection.py  visual_segmentation.py
examples/tabular/: forecasting_interpretable.py  tabular_classification.py  tabular_forecasting.py  tabular_regression.py
examples/text/: summarization.py  text_classification.py  text_classification_multi_label.py  text_embedder.py  translation.py
examples/video/: video_classification.py
examples/visualizations/: pointcloud_detection.py
flash/: __about__.py  __init__.py  __main__.py  info.py  model.py  model_map.py  setup_tools.py
flash/audio/: __init__.py  data.py
flash/core/: Regression.py  __init__.py  adapter.py  classification.py  classification_v2.py  finetuning.py  heads.py  hooks.py  model.py  (+8 more)
flash_examples/: audio_classification.py  audio_source_separation.ipynb  audio_source_separation.py  custom_task.py  face_detection.py  generic_task.py  graph_classification.py  graph_embedder.py  graph_embedding.py  graph_node_classification.py  image_classification.py  image_classification_cli.py  image_classification_meta_learning.py  image_classification_multi_label.py  image_embedder.py  image_transforms.py  instance_segmentation.py  keypoint_detection.py  object_detection.py  pointcloud_classification.py  pointcloud_detection.py  pointcloud_segmentation.py  question_answering.py  semantic_segmentation.py  speech_recognition.py  style_transfer.py  summarization.py  tabular_classification.py  tabular_data.py  tabular_forecasting.py  tabular_regression.py  template.py  text_classification.py  text_classification_multi_label.py  text_embedder.py  text_generation.py  torchvision_classifier.py  translation.py  video_classification.py
flash_notebooks/: audio_classification.ipynb  custom_task_tutorial.ipynb  generic_task.ipynb  image-classification.ipynb  image_classification.ipynb  image_classification.py  image_classification_with_kornia.ipynb  image_classifier.py  tabular_classification.ipynb  tabular_classification.py  text_classification.ipynb  text_classification_data_sources.ipynb  text_classification_prediction.ipynb
notebooks/: dummy.ipynb  flash.ipynb  flash_base_demo.ipynb  general_model.py  image-classification.ipynb  image_classifier.ipynb  image_classifier.py  kaggle_image_classification.ipynb  kaggle_tumor.ipynb  text-classification.ipynb
pl_flash/: __init__.py  _version.py  data.py  flash.py  model.py  utils.py
pl_flash_examples/: generic_task.py  tabular_data.py  text_classification.py  torchvision_classifier.py
requirements/: base.txt  datatype_audio.txt  datatype_effdet.txt  datatype_graph.txt  datatype_image.txt  datatype_image_baal.txt  datatype_image_extras.txt  datatype_image_extras_baal.txt  datatype_image_segm.txt  datatype_image_style_transfer.txt  datatype_image_vissl.txt  datatype_pointcloud.txt  datatype_speech.txt  datatype_tabular.txt  datatype_text.txt  datatype_video.txt  datatype_video_extras.txt  devel.txt  docs.txt  extras.txt  image.txt  install.txt  notebooks.txt  serve.txt  tabular.txt  test.txt  testing_audio.txt  testing_graph.txt  testing_image.txt  testing_serve.txt  tests.txt  text.txt
scripts/: upload_weights_s3.sh
tests/: __init__.py  conftest.py  special_tests.sh  test_data.py  test_model.py  test_utils.py  tpu_tests.sh
train_annotations/: image_1.xml  image_2.xml  image_3.xml
zero_requirements/: image_classification.txt  tabular_classification.txt
(+1244 files in other folders)
