[tool:pytest]
norecursedirs =
    .git
    dist
    build
addopts =
    --strict
    --doctest-modules
    --durations=0

[coverage:report]
exclude_lines =
    pragma: no-cover
    pass
    if __name__ == .__main__.:
    add_model_specific_args

# [coverage:run]
# TODO, remove this ignores in future
# omit =

[flake8]
max-line-length = 120
extend-ignore = E203, W503
ignore =
    W504  # Line break occurred after a binary operator
    F401  # Module imported but unused
exclude = .tox,*.egg,build,temp
select = E,W,F
doctests = True
verbose = 2
# https://pep8.readthedocs.io/en/latest/intro.html#error-codes
format = pylint
# see: https://www.flake8rules.com/


# setup.cfg or tox.ini
[check-manifest]
ignore =
    *.yml
    .github
    .github/*
    .circleci

[metadata]
license_file = LICENSE
description-file = README.md

[versioneer]
 VCS = git
 style = pep440
 versionfile_source = pl_flash/_version.py
 versionfile_build = pl_flash/_version.py
 tag_prefix = v
 parentdir_prefix = 
