[metadata]
license_file = LICENSE
description-file = README.md


[tool:pytest]
norecursedirs =
    .git
    dist
    build
doctest_plus = enabled
addopts =
    --strict
    --durations=0
    --color=yes


[coverage:report]
exclude_lines =
    pragma: no-cover
    pass
    if __name__ == .__main__.:
    add_model_specific_args


[isort]
known_first_party =
    flash
    flash_examples
    tests
line_length = 120
order_by_type = False
# 3 - Vertical Hanging Indent
multi_line_output = 3
include_trailing_comma = True


[flake8]
max-line-length = 120
extend-ignore = E203, W503
ignore =
    # Line break occurred after a binary operator
    W504
exclude =
    *.egg
    build
    temp
    .git
select = E,W,F
doctests = True
verbose = 2
# https://pep8.readthedocs.io/en/latest/intro.html#error-codes
format = pylint
# see: https://www.flake8rules.com/


[versioneer]
VCS = git
style = pep440
versionfile_source = flash/_version.py
versionfile_build = flash/_version.py
tag_prefix = v
parentdir_prefix =


# setup.cfg or tox.ini
[check-manifest]
ignore =
    *.yml
    .github
    .github/*
    .circleci


[mypy]
# Typing tests is low priority, but enabling type checking on the
# untyped test functions (using `--check-untyped-defs`) is still
# high-value because it helps test the typing.
files = flash, flash_examples, tests
pretty = True
show_error_codes = True
disallow_untyped_defs = True
ignore_missing_imports = True

# todo: add proper typing to this module...
[mypy-flash.core.*]
ignore_errors = True

# todo: add proper typing to this module...
[mypy-flash.tabular.*]
ignore_errors = True

# todo: add proper typing to this module...
[mypy-flash.text.*]
ignore_errors = True

# todo: add proper typing to this module...
[mypy-flash.image.*]
ignore_errors = True

# todo
[mypy-tests.*]
ignore_errors = True
